fix alignment of categories

--- a/client/components/inventory/index.less
+++ b/client/components/inventory/index.less
@@ -13,13 +13,17 @@
       }
     }
   }
+}
 
+.tab-content {
+  padding-top: 12px;
 }
 
 h3 {
   font-size: 18px;
   font-weight: bold;
   line-height: 25px;
+  margin-top: 0;
 }
 
 .arrow-right {
